--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-pannellum": "^0.2.16",
     "react-router": "^7.1.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "zod": "^3.24.1"
   },
